// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Content Type Builder - Content types Collection Types Get collection type returns full schema and information 1`] = `
Object {
  "data": Object {
    "apiID": "test-collection-type",
    "schema": Object {
      "attributes": Object {
        "title": Object {
          "pluginOptions": Object {
            "i18n": Object {
              "localized": true,
            },
          },
          "type": "string",
        },
      },
      "collectionName": "test_collection_types",
      "description": "",
      "displayName": "Test Collection Type",
      "draftAndPublish": false,
      "kind": "collectionType",
      "pluginOptions": Object {
        "i18n": Object {
          "localized": true,
        },
      },
      "pluralName": "test-collection-types",
      "restrictRelationsTo": null,
      "singularName": "test-collection-type",
      "visible": true,
    },
    "uid": "api::test-collection-type.test-collection-type",
  },
}
`;

exports[`Content Type Builder - Content types Single Types Get single type returns full schema and information 1`] = `
Object {
  "data": Object {
    "apiID": "test-single-type",
    "schema": Object {
      "attributes": Object {
        "title": Object {
          "pluginOptions": Object {
            "i18n": Object {
              "localized": true,
            },
          },
          "type": "string",
        },
      },
      "collectionName": "test_single_types",
      "description": "",
      "displayName": "Test Single Type",
      "draftAndPublish": false,
      "kind": "singleType",
      "pluginOptions": Object {
        "i18n": Object {
          "localized": true,
        },
      },
      "pluralName": "test-single-types",
      "restrictRelationsTo": null,
      "singularName": "test-single-type",
      "visible": true,
    },
    "uid": "api::test-single-type.test-single-type",
  },
}
`;
